--- a/NetspherePiratesLauncher/Launcher.csproj
+++ b/NetspherePiratesLauncher/Launcher.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7DC96E7A-81D9-4EEE-B9F9-B9E6E53ADEED}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>NetspherePiratesLauncher</RootNamespace>
-    <AssemblyName>NetspherePiratesLauncher</AssemblyName>
+    <AssemblyName>patcher_s4</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -31,6 +31,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,27 +51,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crc32.cs" />
+    <Compile Include="Download.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Xml\OptionsDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml\VersionDto.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -74,6 +91,48 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\radio_off.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\radio_on.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\register1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\register2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\register3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start2.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start3.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
